translate to khmer i18n

--- a/Controller/src/main/resources/messages.properties
+++ b/Controller/src/main/resources/messages.properties
@@ -1,28 +1,81 @@
-AMS=Book Management System
-article.author=Author
-article.description=Description
-article.detail=Article's Detail
-article.identifier=Id
-article.category=Category
-article.title=Title
-article.thumbnail=Image
-article.go_back=Go Back
-article.brand=<h5><b>Book Management System</b></h5>
-article.add_new=Add New
-article.view=View
-article.update=Update
-article.delete=Delete
-article.choose_file=Choose File
-article.reset=Reset
-article.submit=Submit
-article.total_articles=Total Articles:
-article.idNotnull=** ID can not be blank
-article.image=Image
-article.title_not_empty=Title is required
-article.author_not_empty=Author is required
-article.language=Language
-btn.navbar-dropdown=Change
-btn.search=Search
-article.total=Total=
-article.option=choose your category
-article.cancel=Cancel
+#Homepage
+home=Home
+search=Search
+nav-category=Category
+category=Category
+categories=Categories
+notification=Notifications
+read-more=Read More
+popular-post= Popular Post
+favorite-category=Favorite Category
+about-us=About Us
+privacy-footer=Privacy
+users-guide=Users Guide
+
+#Request Modal
+content-request=Content Request
+title=Title
+your-message=Your Message
+close=Close
+send=Send
+
+
+#Category
+latest-post=Latest Post
+keep-reading=Keep Reading
+recent-post=Recent Post
+load-more=Load More
+biography=BIO :
+customize=Customize
+request=Request
+log-out=Logout
+admin=Admin
+
+#Detail
+comment=Comment
+comments=Comments
+recommended-article=Recommended Article
+see-more=See more
+show-more-comment=Show More Comments
+
+#Feedback Modal
+feedback=Feedback
+
+
+#Sign In
+please-login-or-sign-up=Please login or sign up for an account
+email=Email
+password=Password
+remember-me=  Remember me
+sign-up=Sign Up
+log-in=Login
+
+#Sign Up
+sign-up-with-kunloes-account=Sign up with KUNLOES Account
+name=Name
+gender=Gender
+male=Male
+female=Female
+other=Other
+confirm-password=Confirm Password
+
+
+
+
+##Home Admin
+#start-your-day=Start Your Day With KUNLOES
+#question=Question
+#manage-your-reader=Manage Your Reader
+#get-started=Get Started
+#article=Article
+#manage-article-list=Manage Article List
+#feedback=Feedback
+#customize-your-information=Customize Your Information
+#
+##Question Admin
+
+
+
+
+
+
