--- a/Controller/src/main/resources/messages_kh.properties
+++ b/Controller/src/main/resources/messages_kh.properties
@@ -1,30 +1,62 @@
-AMS=???? ??????????????????
-article.author=??????????
-article.description=???????
-article.detail=? ???????????????
-article.identifier=??????????
-article.title=???????
-article.thumbnail=????????
-article.action=????????
-article.go_back=???????????
-article.brand=???? ??????????????????
-article.add_new=??????????
-article.view=???
-article.update=??
-article.delete=???
-article.category=??????
-article.choose_file=??????????????
-article.reset=???????????
-article.submit=????????
-article.total_articles=??????????: {0}
-article.required={0} ?????????????
-article.image=??????
-article.title_not_empty=??????????????????
-article.author_not_empty=??????????????????????????
-article.language=????
-btn.navbar-dropdown=?????
-article.idNotnull=????????????????????
-btn.search=???????
-article.total=????=
-article.option=?????????????????
-article.cancel=??????
+#Homepage
+home=\u1791\u17C6\u1796\u17D0\u179A\u178A\u17BE\u1798
+search=\u179F\u17D2\u179C\u17C2\u1784\u179A\u1780
+nav-category=\u1794\u17D2\u179A\u1797\u17C1\u1791
+category=\u1794\u17D2\u179A\u1797\u17C1\u1791\u17A2\u178F\u17D2\u1790\u1794\u1791
+categories=\u1794\u17D2\u179A\u1797\u17C1\u1791\u17A2\u178F\u17D2\u1790\u1794\u1791
+notification=\u1780\u17B6\u179A\u1787\u17BC\u1793\u178A\u17C6\u178E\u17B9\u1784
+read-more=\u17A2\u17B6\u1793\u1794\u1793\u17D2\u178F
+popular-post=\u17A2\u178F\u17D2\u1790\u1794\u1791\u1796\u17C1\u1789\u1793\u17B7\u1799\u1798
+favorite-category=\u17A2\u178F\u17D2\u1790\u1794\u1791\u1796\u17C1\u1789\u1785\u17B7\u178F\u17D2\u178F
+about-us=\u17A2\u17C6\u1796\u17B8\u1796\u17BD\u1780\u1799\u17BE\u1784
+privacy-footer=\u17AF\u1780\u1787\u1793\u1797\u17B6\u1796
+users-guide=\u1780\u17B6\u179A\u178E\u17C2\u1793\u17B6\u17C6\u17A2\u17D2\u1793\u1780\u1794\u17D2\u179A\u17BE\u1794\u17D2\u179A\u17B6\u179F\u17CB
+
+#Request Modal
+content-request=\u1780\u17B6\u179A\u179F\u17D2\u1793\u17BE\u179F\u17BB\u17C6\u17A2\u178F\u17D2\u1790\u1794\u1791
+title=\u1785\u17C6\u178E\u1784\u1787\u17BE\u1784
+your-message=\u179F\u17B6\u179A\u179A\u1794\u179F\u17CB\u17A2\u17D2\u1793\u1780
+close=\u1794\u17B7\u1791\u1795\u17D2\u1791\u17B6\u17C6\u1784
+send=\u1795\u17D2\u1789\u17BE\u179A\u1791\u17C5
+
+
+
+#Category
+latest-post=\u17A2\u178F\u17D2\u1790\u1794\u1791\u1785\u17BB\u1784\u1780\u17D2\u179A\u17C4\u1799\u1794\u1784\u17D2\u17A2\u179F\u17CB
+keep-reading=\u17A2\u17B6\u1793\u1794\u1793\u17D2\u178F
+recent-post=\u17A2\u178F\u17D2\u1790\u1794\u1791\u1790\u17D2\u1798\u17B8
+load-more=\u1795\u17D2\u1791\u17BB\u1780\u1794\u1793\u17D2\u1790\u17C2\u1798
+biography=\u1794\u17D2\u179A\u179C\u178F\u17D2\u178F\u17B7\u179A\u17BC\u1794 :
+customize=\u1780\u17C2\u179F\u1798\u17D2\u179A\u17BD\u179B
+request=\u179F\u17D2\u1793\u17BE\u179F\u17BB\u17C6
+log-out=\u1785\u17B6\u1780\u1785\u17C1\u1789
+admin=\u17A2\u17C1\u178F\u1798\u17B8\u1793
+
+#Detail
+comment=\u1798\u178F\u17B7
+comments=\u1798\u178F\u17B7
+recommended-article=\u17A2\u178F\u17D2\u1790\u1794\u1791\u178A\u17C2\u179B\u1782\u17BD\u179A\u17A2\u17B6\u1793
+see-more=\u17A2\u17B6\u1793\u1794\u1793\u17D2\u178F
+show-more-comment=\u1794\u1784\u17D2\u17A0\u17B6\u1789\u1798\u178F\u17B7\u1794\u1793\u17D2\u1790\u17C2\u1798
+#Feedback Modal
+feedback=\u1798\u178F\u17B7\u179F\u17D2\u1790\u17B6\u1794\u1793\u17B6
+
+
+
+#Sign In
+please-login-or-sign-up=\u179F\u17BC\u1798\u1798\u17C1\u178F\u17D2\u178F\u17B6\u1785\u17BC\u179B\u1782\u178E\u1793\u17B8 \u17AC\u1794\u1784\u17D2\u1780\u17BE\u178F\u1782\u178E\u1793\u17B8\u1790\u17D2\u1798\u17B8 
+email=\u17A2\u17CA\u17B8\u1798\u17C2\u179B
+password=\u179B\u17C1\u1781\u179F\u1798\u17D2\u1784\u17B6\u178F\u17CB
+remember-me=  \u1785\u1784\u1785\u17B6\u17C6
+sign-up=\u1794\u1784\u17D2\u1780\u17BE\u178F\u1790\u17D2\u1798\u17B8
+log-in=\u1785\u17BC\u179B\u1782\u178E\u1793\u17B8
+
+#Sign Up
+sign-up-with-kunloes-account= \u1794\u1784\u17D2\u1780\u17BE\u178F\u1782\u178E\u1793\u17B8 KUNLOES \u1790\u17D2\u1798\u17B8
+name=\u1788\u17D2\u1798\u17C4\u17C7
+gender=\u1797\u17C1\u1791
+male=\u1794\u17D2\u179A\u17BB\u179F
+female=\u179F\u17D2\u179A\u17B8
+other=\u1795\u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F
+confirm-password=\u1794\u1789\u17D2\u1787\u17B6\u1780\u17CB\u179B\u17C1\u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB
+
