add function change language to navbar

--- a/Controller/src/main/resources/messages.properties
+++ b/Controller/src/main/resources/messages.properties
@@ -59,6 +59,11 @@ female=Female
 other=Other
 confirm-password=Confirm Password
 
+#Language
+language=Language
+english=ENGLISH
+khmer=KHMER
+
 
 
 
