--- a/Controller/src/main/resources/messages_kh.properties
+++ b/Controller/src/main/resources/messages_kh.properties
@@ -60,3 +60,9 @@ female=\u179F\u17D2\u179A\u17B8
 other=\u1795\u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F
 confirm-password=\u1794\u1789\u17D2\u1787\u17B6\u1780\u17CB\u179B\u17C1\u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB
 
+#Language
+language=\u1794\u17D2\u178F\u17BC\u179A\u1797\u17B6\u179F\u17B6
+english=\u17A2\u1784\u17CB\u1782\u17D2\u179B\u17C1\u179F
+khmer=\u1797\u17B6\u179F\u17B6\u1781\u17D2\u1798\u17C2\u179A
+
+
